integration phase n/n